Fix the executable jar/war files when the filename contains '#' symbols.