@@ -9,6 +9,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
@@ -57,7 +58,7 @@ public class JarMain implements Runnable {
     }
 
     private URL extractJar(String jarpath) throws Exception {
-        InputStream jarStream = new URL("jar:" + path.replace(MAIN, jarpath)).openStream();
+        InputStream jarStream = new URI("jar", path.replace(MAIN, jarpath), "").toURL().openStream();
         String jarname = jarpath.substring(jarpath.lastIndexOf("/") + 1, jarpath.lastIndexOf("."));
         File jarFile = new File(extractRoot, jarname + ".jar");
         jarFile.deleteOnExit();
